# GAMARL

./: CITATION.cff  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-cuda.txt  requirements.txt
assets/: README.txt
assets/scenarios/sq1/: README.md  sq1.rou.xml  sq1.sumocfg
assets/scenarios/sq2/: README.md  sq2.rou.xml  sq2.sumocfg
assets/scenarios/sq3/: README.md  sq3.rou.xml  sq3.sumocfg
configs/: default.yaml  env_sq1.yaml  env_sq2.yaml  env_sq3.yaml  env_synthetic.yaml  model.yaml
docker/: Dockerfile  docker-compose.yml
scripts/: download_sumo_assets.sh  eval.sh  train.sh
src/: eval.py  train.py
src/gamarl/: __init__.py
src/gamarl/algo/: __init__.py  curriculum.py  dqn_agent.py  losses.py
src/gamarl/data/: batch.py  replay_buffer.py
src/gamarl/envs/: __init__.py  base_env.py  observation_builder.py  sumo_env.py  sumo_scenario.py  synthetic_env.py
src/gamarl/evaluation/: evaluator.py  report.py
src/gamarl/metrics/: __init__.py  aggregator.py  traffic_metrics.py
src/gamarl/models/: __init__.py  comm.py  gamarl_model.py  global_q.py  layers.py  local_policy.py
src/gamarl/utils/: checkpointing.py  logger.py  schedulers.py  seed.py  tensor_ops.py
tests/: test_gating.py  test_gcn_norm.py  test_shapes.py
