[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamarl"
version = "0.1.0"
description = "Reference implementation of Gated-Attention Graph MARL (GAMARL) for corridor traffic signal control."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "GAMARL contributors"}]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
